load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
  name = "uniq",
  srcs = ["uniq_main.cc"],
  deps = [
    "@abseil-cpp//absl/flags:parse",
    ":get_unique"
  ]
)

cc_library(
  name = "get_unique",
  srcs = ["get_unique.cc"],
  hdrs = ["get_unique.h"]
)

cc_test(
  name = "get_unique_test",
  size = "small",
  srcs = ["get_unique_test.cc"],
  deps = [
    "@googletest//:gtest",
    "@googletest//:gtest_main",
    ":get_unique",
  ],
)

sh_test(
    name = "uniq_integration_test",
    size = "small",
    srcs = ["uniq_integration_test.sh"],
    data = [
      ":uniq",
      "testdata/expected_output.txt",
      "testdata/test.txt"
    ],
    args = [
      '$(location :uniq)',
    ],
)
